@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4SmoothTrajectoryPoint.hh,v 1.3 2002-10-16 11:38:36 johna Exp $
+// $Id: G4SmoothTrajectoryPoint.hh,v 1.4 2002-10-28 11:10:57 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -69,8 +69,8 @@ public: // without description
    { return fAuxiliaryPointVector; }
 
 // Get method for HEPRep style attributes
-   virtual const G4std::vector<G4AttDef>* GetAttDefs() const;
-   virtual G4std::vector<G4AttValue>* GetAttValues() const;
+   virtual const G4std::map<G4String,G4AttDef>* GetAttDefs() const;
+   virtual G4std::vector<G4AttValue>* CreateAttValues() const;
 
 //---------
    private:
