@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4VTrajectoryPoint.hh,v 1.8 2002-10-16 11:38:37 johna Exp $
+// $Id: G4VTrajectoryPoint.hh,v 1.9 2002-10-28 11:10:58 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -39,12 +39,13 @@
 #ifndef G4VTrajectoryPoint_h
 #define G4VTrajectoryPoint_h 1
 
+#include "globals.hh"
+#include "g4std/vector"
+#include "g4std/map"
+#include "G4ThreeVector.hh"
+
 class G4AttDef;
 class G4AttValue;
-
-#include "g4std/vector"
-#include "globals.hh"
-#include "G4ThreeVector.hh"
 
 class G4VTrajectoryPoint
 {
@@ -70,18 +71,21 @@ class G4VTrajectoryPoint
    // trajectory.  The user must test the validity of this pointer.
 
  // Get method for HEPRep style attribute definitions
-   virtual const G4std::vector<G4AttDef>* GetAttDefs() const
+   virtual const G4std::map<G4String,G4AttDef>* GetAttDefs() const
    { return 0; }
-   // If implemented by a derived class, returns a pointer to a list
-   // of attribute definitions suitable, e.g., for picking.  The user
+   // If implemented by a derived class, returns a pointer to a map of
+   // attribute definitions for the attribute values below.  The user
    // must test the validity of this pointer.
 
  // Get method for HEPRep style attribute values
-   virtual G4std::vector<G4AttValue>* GetAttValues() const
+   virtual G4std::vector<G4AttValue>* CreateAttValues() const
    { return 0; }
    // If implemented by a derived class, returns a pointer to a list
-   // of attribute values suitable, e.g., for picking.  The user must
-   // test the validity of this pointer and delete the list after use.
+   // of attribute values suitable, e.g., for picking.  Each must
+   // refer to an attribute definition in the above map; its name is
+   // the key.  The user must test the validity of this pointer and
+   // delete the list after use.
+
 };
 
 #endif
