@@ -1,4 +1,4 @@
-$Id: History,v 1.39 2002-10-24 14:21:05 johna Exp $
+$Id: History,v 1.40 2002-10-28 11:10:45 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 28, 2002, J.Allison
+- Changed GetAttDefs return signature to map.
+- Changed GetAttValues to CreateAttValues.
+- Improved descriptions.
 
 Oct 24, 02 J.Allison (traj02)
 - Implemented simple versions of G4Trajectory::GetAttDefs/Values.
